Añadí lights.